<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".ui.EditWeatherNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/fragment_edit_weather_note_timestamp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/timestampCalendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/fragment_edit_weather_note_temperature"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/temperatureField"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/fragment_edit_weather_note_temperature_placeholder"
                android:inputType="numberSigned" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/fragment_edit_weather_note_pressure"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pressureField"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/fragment_edit_weather_note_pressure_placeholder"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_weather_note_clouds"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cloudCoverTypesSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_edit_weather_note_weather_type"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/weatherEventSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_edit_weather_note_wind_direction"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/windDirectionSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/fragment_edit_weather_note_wind_velocity"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/windVelocityField"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/fragment_edit_weather_note_wind_velocity_placeholder"
                android:inputType="number" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="10dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/editWeatherNoteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/fragment_edit_weather_note_create_note" />

        <LinearLayout
            android:id="@+id/deleteWeatherNoteLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginVertical="20dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/deleteWeatherNoteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="@string/fragment_edit_weather_note_delete_note"
                app:icon="@android:drawable/ic_menu_delete" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>