<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Button
            android:id="@+id/toggleFilterLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_home_filter_button_label"
            app:icon="@android:drawable/ic_menu_search" />

        <LinearLayout
            android:id="@+id/filterLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_lower_border_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/lowerDateBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_high_border_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <CalendarView
                android:id="@+id/highDateBorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/cloudCoverTypeSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/weatherEventTypeSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/applyFilterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#4CAF50"
                    android:text="@string/fragment_home_apply_filter_button_label" />

                <Button
                    android:id="@+id/clearFilterButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:backgroundTint="#F44336"
                    android:text="@string/fragment_home_clear_filter_button_label"
                    app:iconSize="30dp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="10dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/collectStatisticsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="@string/fragment_home_collect_statistics_button_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weatherNotesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>