<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".ui.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/statisticPeriodText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_statistics_period_title"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:text="@string/fragment_statistics_average_temperature"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/averageTemperatureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:text="@string/fragment_statistics_average_pressure"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/averagePressureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="TextView"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/fragment_statistics_wind_rose"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.RadarChart
                android:id="@+id/windRoseRadarChart"
                android:layout_width="match_parent"
                android:layout_height="440dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>